# HardwareRenderer

./: CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindSDL2_ttf.cmake
hwr/include/hwr/: buffer.hpp  gpu_context.hpp  log.hpp  math.hpp  program.hpp
hwr/include/hwr/shader/: shader.hpp  types.hpp
hwr/rendering_pipeline/gpu/: gpu_cl_init.hpp
hwr/rendering_pipeline/gpu/buffer/: gpu_buffer.hpp
hwr/rendering_pipeline/gpu/context/: gpu_context.cpp  gpu_context.hpp
hwr/rendering_pipeline/gpu/program/: arg.hpp  program.hpp
hwr/rendering_pipeline/gpu/shader/: program_context.cpp  program_context.hpp  shader.hpp  shader_types_util.hpp  static_string.hpp  string_parsing.cpp  string_parsing.hpp  types.hpp
hwr/util/log/: log.cpp  log.hpp  log_config_detail.hpp
hwr/util/math/: math_util.cpp  math_util.hpp
rendering_api/log/: log.cpp  log.hpp
rendering_api/rendering_pipeline/: gpu_context.cpp  gpu_context.hpp
rendering_api/rendering_pipeline/gpu/: gpu_assert_macros_detail.hpp  gpu_buffer.hpp  gpu_context.cpp  gpu_context.hpp
rendering_api/util/: math_util.cpp  math_util.hpp
rendering_api/util/log/: log.cpp  log.hpp  log_config.hpp
rendering_api/util/math/: math_util.cpp  math_util.hpp
